# QRegExp-Editor

./: ABOUT.html  AUTHORS  AUTHORS.html  CMakeLists.txt  COPYING.html  CPackConfig.cmake  CREDITS  ChangeLog  INSTALL  README.md  application.qrc  compile-win32.bat  qregexp_editor-version.cpp.in
cmake/: FileUtils.cmake  GetVersionFromGit.cmake  QRegExpEditorVersion.cmake
images/: create_images.sh
scripts/: astyle-qregexp_editor  astyle-qregexp_editor.bat
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  constants.h  escapedpatterndialog.cpp  escapedpatterndialog.h  main.cpp  mainwindow.cpp  mainwindow.h  node.cpp  node.h  parentheseshighlighter.cpp  parentheseshighlighter.h  patternfilter.cpp  patternfilter.cpp.orig  patternfilter.h  qregexp_editor-version.h  regexpmodel.cpp  regexpmodel.h  regexptextedit.cpp  regexptextedit.h  regexptextedit_p.cpp  regexptextedit_p.h  searchdata.cpp  searchdata.h  searchsettings.cpp  searchsettings.h  treeitem.cpp  treeitem.h
src/preferences/: preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  preferencespageinterface.h  regexpoptions.cpp  regexpoptions.h  regexppreferencespage.cpp  regexppreferencespage.h  regexppreferencespage.ui  regexpsettings.cpp  regexpsettings.h  settingsinterface.cpp  settingsinterface.h
src/tests/: CMakeLists.txt  patternfiltertest.cpp  patternfiltertest.h
src/ui/: aboutdialog.ui  escapedpatterndialog.ui  mainwindow.ui
translations/: qregexp-editor_de.ts  qregexp-editor_fa.ts
